--- a/package.json
+++ b/package.json
@@ -3,20 +3,12 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"serve": "vue-cli-service serve",
-		"build": "vue-cli-service build",
-		"lint": "vue-cli-service lint"
+		"serve": "vue-cli-service serve --open",
+		"build": "vue-cli-service build"
 	},
 	"dependencies": {
 		"@casl/ability": "4.1.6",
 		"@casl/vue": "1.1.1",
-		"@fullcalendar/common": "5.x",
-		"@fullcalendar/core": "5.x",
-		"@fullcalendar/daygrid": "5.x",
-		"@fullcalendar/interaction": "5.x",
-		"@fullcalendar/list": "5.x",
-		"@fullcalendar/timegrid": "5.x",
-		"@fullcalendar/vue": "5.x",
 		"@vue/composition-api": "1.3.0",
 		"@vueuse/core": "4.0.0",
 		"animate.css": "4.1.1",
@@ -29,7 +21,6 @@
 		"core-js": "3.8.1",
 		"echarts": "4.8.0",
 		"jsonwebtoken": "8.5.1",
-		"leaflet": "1.6.0",
 		"portal-vue": "2.1.7",
 		"postcss-rtl": "1.7.3",
 		"prismjs": "1.19.0",
